fixed collapsing text on loading for nranjan

--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 
 body{
   background-color: #0B0B0B !important;
+  font-family: "Raleway", sans-serif !important;
+  
 }
 
 
 .thenextera {
   color: rgba(185, 182, 182, 0.5);
-  font-size: 10svw;
-  font-family: "Raleway", sans-serif !important;
+  font-size: 10vw;
   font-weight: 800;
   line-height: normal;
   position: relative;
@@ -22,21 +23,9 @@ body{
   margin-bottom: 20vh;
 }
 /* Custom CSS */
-.image-container {
-  position: relative;
-  width: 100%;
-}
 
-.image-caption {
-  position: absolute;
-  bottom: 50px;
-  left: 50px;
-  right: 0; /* Optional: Add background color for better readability */
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 5vw;
-  font-family: "Raleway", sans-serif !important;
-  font-weight: 800;
-}
+
+
 .btn:hover{
   background-color: #536FEB !important;
 }
@@ -68,13 +57,43 @@ a {
   display: none;
   
 }
-.lg{
-  gap: 2rem!important;
-    display: flex;
-    align-items: center;
+
+.lgpage1{
+  background-image: url("./page1.svg");
+  width: 100%;
+  height: 120vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-
-
+.lgpage2{
+  background-image: url("./page2.svg");
+  width: 100%;
+  height: 120vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.lgpage3{
+  background-image: url("./page3.svg");
+  width: 100%;
+  height: 120vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.btn1-sm{
+  text-align: right;
+    position: relative;
+    top: 52vh;
+}
+.lg-text{
+  position: relative;
+    top: 24vh;
+    text-align: left;
+    font-size: 5vw;
+    font-weight: 900 !important;
+}
 
 @media only screen and (max-width: 515px) {
   /* Adjust styles for phones */
@@ -83,6 +102,7 @@ a {
     width: 100%;
     height: 100vh;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
   }
   .page2{
@@ -90,6 +110,7 @@ a {
     width: 100%;
     height: 100vh;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
   }
   .page3{
@@ -97,6 +118,7 @@ a {
     width: 100%;
     height: 100vh;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
   }
   .btn1-sm{
